gallery fix, 2 border stories add, alignment fix

--- a/Css/stylesheet.css
+++ b/Css/stylesheet.css
@@ -67,16 +67,43 @@
     text-align: center;
 }
 
-  
-  .gridContainer{
-    display:grid;
+.containerAbout{
     text-align: center;
-    background-color:#c2d93f;
-    grid-template-columns: auto auto auto;
-    grid-gap:20px;
+    
+}
 
+#borderOne{
+    border-style: solid;
+    border-width: 2px;
+    padding-bottom:350px;
+}
+
+#borderTwo{
+    border-style: solid;
+    border-width: 2px;
+    padding-bottom:350px;
 
 }
+
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+  
+.gallery{
+    padding-top:100px;
+    background-color:#c2d93f;
+}
+
+.galleryContainer{
+    display:grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+    grid-gap:3px;
+    padding:30px;
+
+}
+
 
 
 .container{
@@ -93,9 +120,19 @@
 
 
 ul li{
-    float:left;
-    padding-left:20px ;
-    padding-right:20px ;
+    display:inline-block;
+    padding-left:40px ;
+    padding-right:40px ;
+    padding-top:80px;
+}
+
+footer{
+    margin-top: 150px;
+    background-color:#c2d93f;
+}
+
+footer div{
+    text-align: center;
 }
 
 
